tests/testcrate/tests/ui/select_expr.stderr
error[E0308]: mismatched types
  --> $DIR/select_expr.rs:58:16
   |
58 |     sql!(Table[index]);
   |                ^^^^^ expected i64, found i32

error[E0308]: mismatched types
  --> $DIR/select_expr.rs:63:40
   |
63 |     sql!(Table.filter(i32_field == 42)[index]);
   |                                        ^^^^^ expected i64, found i32

error[E0308]: mismatched types
  --> $DIR/select_expr.rs:70:54
   |
70 |     sql!(Table.filter(i32_field > value && field1 == value1));
   |                                                      ^^^^^^
   |                                                      |
   |                                                      expected struct `std::string::String`, found integral variable
   |                                                      help: try using a conversion method: `value1.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/select_expr.rs:77:35
   |
77 |     sql!(Table.filter(i32_field > value));
   |                                   ^^^^^ expected i32, found i64

error[E0308]: mismatched types
  --> $DIR/select_expr.rs:86:32
   |
86 |     sql!(Table.filter(other == table1));
   |                                ^^^^^^ expected struct `OtherTable`, found struct `Table`
   |
   = note: expected type `std::option::Option<OtherTable>`
              found type `std::option::Option<Table>`

error: aborting due to 5 previous errors

